--- a/client/index.html
+++ b/client/index.html
@@ -407,6 +407,7 @@
                                         (.csv)</p>
                                 <p style="font-size: 0.9rem; margin-top: 8px;">Supports raw CSV with target column
                                         'Cancelled'</p>
+                                <p style="font-size: 0.8rem; margin-top: 6px; color: #f59e0b;">⚠ Please do not upload files with more than 10,000 rows — free hosting plan has limited CPU resources.</p>
                                 <input type="file" id="file-upload" hidden accept=".csv">
                                 <p id="file-name" style="margin-top: 10px; color: var(--accent); font-weight: bold;">
                                 </p>
