--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,10 @@
                                         Uses a full pipeline with Cyclic Transformation, Ordinal Encoding, and MinMax
                                         Scaling.
                                 </p>
+                                <p style="font-size: 0.8rem; margin-top: 12px; color: rgba(255,255,255,0.6);">
+                                        ℹ️ This app is hosted on a free plan. If it was inactive, the first load may
+                                        take 30–60 seconds to wake up.
+                                </p>
                         </div>
                 </div>
         </header>
@@ -407,7 +411,9 @@
                                         (.csv)</p>
                                 <p style="font-size: 0.9rem; margin-top: 8px;">Supports raw CSV with target column
                                         'Cancelled'</p>
-                                <p style="font-size: 0.8rem; margin-top: 6px; color: #f59e0b;">⚠ Please do not upload files with more than 10,000 rows — free hosting plan has limited CPU resources.</p>
+                                <p style="font-size: 0.8rem; margin-top: 6px; color: #f59e0b;">⚠ Please do not upload
+                                        files with more than 10,000 rows — free hosting plan has limited CPU resources.
+                                </p>
                                 <input type="file" id="file-upload" hidden accept=".csv">
                                 <p id="file-name" style="margin-top: 10px; color: var(--accent); font-weight: bold;">
                                 </p>
