--- a/client/index.html
+++ b/client/index.html
@@ -20,8 +20,9 @@
                                         Uses a full pipeline with Cyclic Transformation, Ordinal Encoding, and MinMax
                                         Scaling.
                                 </p>
-                                <p style="font-size: 0.8rem; margin-top: 12px; color: rgba(255,255,255,0.6);">
-                                        ℹ️ This app is hosted on a free plan. If it was inactive, the first load may
+                                <p
+                                        style="font-size: 0.85rem; margin-top: 14px; padding: 10px 16px; background: #f59e0b; color: #1a1a1a; border-radius: 8px; font-weight: 500;">
+                                        ⚠️ This app is hosted on a free plan. If it was inactive, the first load may
                                         take 30–60 seconds to wake up.
                                 </p>
                         </div>
